--- a/app/views/usuarios/registrations/edit.html.erb
+++ b/app/views/usuarios/registrations/edit.html.erb
@@ -40,9 +40,27 @@
       </div>
       </div>
 
-      <div class="field">
-        <label class="label has-text-left">Direccion</label>
-        <%= f.text_field :direccion, :class => "input", :type => "text", :placeholder => "Ingrese su Direccion" %>
+      <label class="label has-text-left"> Ingrese su direccion</label>
+      <div class="columns">
+        
+        <div class="column">
+          <div class="field">
+            <%# <%= f.label :direccion , :class => "label"%> 
+            <%= f.text_field :direccion, :class => "input", :type => "text", :placeholder => "Calle"%>
+          </div>
+        </div>
+        <div class="column">
+          <div class="field">
+            <%# <%= f.label :direccion , :class => "label"%> 
+            <%= f.text_field :direccion, :class => "input", :type => "text", :placeholder => "Numero"%>
+          </div>
+        </div>
+        <div class="column">
+          <div class="field">
+            <%# <%= f.label :direccion , :class => "label"%> 
+            <%= f.text_field :direccion, :class => "input", :type => "text", :placeholder => "Comuna" %>
+          </div>
+        </div>
       </div>
 
       <div class="field">
