--- a/app/views/usuarios/registrations/new.html.erb
+++ b/app/views/usuarios/registrations/new.html.erb
@@ -2,9 +2,9 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "usuarios/shared/error_messages", resource: resource %>
   <div class="columns is-centered mt-4">
-    <div class="column is-4">
+    <div class="column is-4 has-background-info-light">
 
-      <div><h1 class="title has-background-info-light is-3 mb-4">Registro</h1></div>
+      <div><h1 class="title  is-3 mb-4">Registro</h1></div>
 
       <div class="field">
         <%# <%= f.label :nombre, :class => "label"%> 
@@ -69,7 +69,7 @@
         <% if @minimum_password_length %>
         <% end %>
         <p class="control has-icons-left">
-        <%= f.password_field :password, :class => "input", :type => "password", :placeholder => "Contraseña (6 caracteres mínimo)" %>
+          <%= f.password_field :password, :class => "input", :type => "password", :placeholder => "Contraseña (6 caracteres mínimo)" %>
           <span class="icon is-small is-left">
             <i class="fas fa-lock"></i>
           </span>
@@ -77,8 +77,12 @@
       </div>
 
       <div class="field">
-        <%# <%= f.label :confirmacion_contraseña, :class => "label" %> 
-        <%= f.password_field :password_confirmation, :class => "input", :type => "password", :placeholder => "Contraseña"  %>
+        <p class="control has-icons-left">
+          <%= f.password_field :password_confirmation, :class => "input", :type => "password", :placeholder => "Contraseña" %>
+          <span class="icon is-small is-left">
+            <i class="fas fa-lock"></i>
+          </span>
+        </p>
       </div>
 
       <div class="actions">
