--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -1,6 +1,3 @@
-<% unless usuario_signed_in? %>
-    <h2 class = "mt-4 title has-text-dark has-background-info-light is-3"> Bienvenid@ a Turnos UC! </h2>
-<% end %>
 
 <div class="columns">
     <div class="column is-one-fifth has-background-info-light mt-3 ml-3">
@@ -11,8 +8,9 @@
             </p>
             <ul class="menu-list">
                 <li><a href=<%= turnos_new_path %>> Crear Turno </a></li>
-                <li><a href=<%= turnos_index_path(:razon => "Turnos Creados por mi") %>> Ver Mis Turnos </a></li>
-                <li><a href=<%= turnos_index_path(:razon => "Turnos en los que estoy") %>> Turnos de los que Participo </a></li>
+                <li><a href=<%= turnos_index_path(:razon => "Buscador de Turnos") %>> Buscador de Turnos </a></li>
+                <li><a href=<%= turnos_index_path(:razon => 'Mis Turnos') %>> Ver Mis Turnos </a></li>
+                <li><a href=<%= turnos_index_path(:razon => "Turnos de los que Participo") %>> Turnos de los que Participo </a></li>
 
             </ul>
             <p class="menu-label">
@@ -27,102 +25,63 @@
 
     </div>
     <div align="center" class="column">
-        <% if params[:razon] == "Buscador de Turnos" %>
-            <h1 class="mt-4 title has-background-info-light is-4">Buscador de Turnos</h1>
-            <% if @turnos_buscador.empty?%>
-                <h3 class="subtitle"> No hay turnos disponibles <h3>
-            <% else %>
-            
-                <table class="table is-striped is-hoverable ">
-                    <thead>
-                        <tr>
-                            <th>Día de la semana</th>
-                            <th>Dirección de llegada</th>
-                            <th>Dirección de salida</th>
-                            <th>Hora de salida</th>
-                            <th>Capacidad</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                            <% @turnos_buscador.each do |turno| %>
-                            <tr>
-                                <td><%= turno.dia_de_la_semana%></td>
-                                <td><%= turno.direccion_llegada%></td>
-                                <td><%= turno.direccion_salida%></td>
-                                <td><%= turno.hora_salida%></td>
-                                <td><%= "%i/%i" % [(PerteneceA.where(id_turno: turno.id).count + 1), turno.limite_personas] %></td>
-                                <% if usuario_signed_in? %>
-                                <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id), class: "button is-small is-link is-light is-focused"%>
-                                <% end %>
-                                </td>
-                            </tr>
-                            <% end %>
-                    </tbody>
-                </table>
-            <%  end  %>
-
-        <% elsif params[:razon] == "Turnos Creados por mi" %>
-            <h1 class="mt-4 title has-background-info-light is-4">Turnos creados por mí</h1>
-            <% if @mis_turnos.empty?%>
-                <h3 class="subtitle"> No hay turnos disponibles <h3>
-            <% else %>
-                <table class="table is-striped is-hoverable ">
-                    <thead>
-                        <tr>
-                            <th>Día de la semana</th>
-                            <th>Dirección de llegada</th>
-                            <th>Dirección de salida</th>
-                            <th>Hora de salida</th>
-                            <th>Capacidad</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% @mis_turnos.each do |turno| %>
-                            <tr>
-                                <td><%= turno.dia_de_la_semana%></td>
-                                <td><%= turno.direccion_llegada%></td>
-                                <td><%= turno.direccion_salida%></td>
-                                <td><%= turno.hora_salida%></td>
-                                <td><%= "%i/%i" % [(PerteneceA.where(id_turno: turno.id).count + 1), turno.limite_personas] %></td>
-                                <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id), class: "button is-small is-link is-light is-focused"%>
-                                </td>
-                            </tr>
-                        <% end %>
-                    </tbody>
-                </table>
-            <% end %>
-                    
-        <% elsif params[:razon] = "Turnos en los que estoy" %>
-            <h1 class="mt-4 title has-background-info-light is-4">Turnos en los que estoy </h1>
-            <% if @turnos_que_estoy.empty?%>
-                <h3 class = "subtitle"> No hay turnos disponibles <h3>
-            <% else %>
-                <table class="table is-striped is-hoverable ">
-                    <thead>
-                        <tr>
-                            <th>Día de la semana</th>
-                            <th>Dirección de llegada</th>
-                            <th>Dirección de salida</th>
-                            <th>Hora de salida</th>
-                            <th>Capacidad</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% @turnos_que_estoy.each do |turno| %>
-                            <tr>
-                                <td><%= turno.dia_de_la_semana%></td>
-                                <td><%= turno.direccion_llegada%></td>
-                                <td><%= turno.direccion_salida%></td>
-                                <td><%= turno.hora_salida%></td>
-                                <td><%= "%i/%i" % [(PerteneceA.where(id_turno: turno.id).count + 1), turno.limite_personas] %></td>
-                                <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id), class: "button is-small is-link is-light is-focused"%>
-                                </td>
-                            </tr>
-                        <% end %>
-                    </tbody>
-                </table>
-            <% end %>
-
+        <% if params[:razon] %>
+            <h1 class="mt-4 title has-background-info-light is-4"> <%= params[:razon] %> </h1>
+        <% else %>
+            <h1 class="mt-4 title has-background-info-light is-4"> Buscador de Turnos </h1>
         <% end %>
+
+        <%= form_tag(turnos_index_path, method: :get) do %>
+            <div class="columns">
+                <div class="column is-half is-offset-one-fifth">
+                    <div class="field">
+                        <p class="control has-icons-left">
+                            <%= text_field_tag :busqueda_por_direccion, params[:busqueda_por_direccion], :class => "input", :placeholder => "Busqueda por direccion"%>
+                            <span class="icon is-small is-left">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </p>
+                    </div>
+                </div>
+                <div class="column has-text-left">
+                    <div class="field">
+                        <%= submit_tag 'Buscar', class: "button is-success is-outlined is-responsive" %>
+                    </div>
+                </div>
+            </div>
+            <%= hidden_field_tag :razon %>
+        <%  end  %>
+
+        <% if @turnos.empty?%>
+            <h3 class="subtitle"> No hay turnos disponibles <h3>
+        <% else %>
+        
+            <table class="table is-striped is-hoverable ">
+                <thead>
+                    <tr>
+                        <th>Día de la semana</th>
+                        <th>Dirección de llegada</th>
+                        <th>Dirección de salida</th>
+                        <th>Hora de salida</th>
+                        <th>Capacidad</th>
+                    </tr>
+                </thead>
+                <tbody>
+                        <% @turnos.each do |turno| %>
+                        <tr>
+                            <td><%= turno.dia_de_la_semana%></td>
+                            <td><%= turno.direccion_llegada%></td>
+                            <td><%= turno.direccion_salida%></td>
+                            <td><%= turno.hora_salida%></td>
+                            <td><%= "%i/%i" % [(PerteneceA.where(id_turno: turno.id).count + 1), turno.limite_personas] %></td>
+                            <% if usuario_signed_in? %>
+                            <td><%= link_to "Ver Turno", turnos_show_path(:id => turno.id), class: "button is-small is-link is-light is-focused"%>
+                            <% end %>
+                            </td>
+                        </tr>
+                        <% end %>
+                </tbody>
+            </table>
+        <%  end  %>
     </div>
 </div>
